<resources>
    <string name="app_name">CleanArchitectureWithAdapter</string>
    <string name="sort_price">Sort Price</string>
    <string name="market_cap">Market Cap</string>
    <string name="coin_description">Coin Description</string>
    <string name="current_price">Current Price</string>
    <string name="coin_price">Coin Price</string>
    <string name="low_price">Low Price</string>
    <string name="high_price">High Price</string>
    <string name="price_change">Price Change</string>
    <string name="coin_name">Coin Name</string>
</resources>