<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.CoinDetail.CoinDetailActivity">


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/coinProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCoinDetail"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/txtCoinNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:text="@string/coin_name"
                android:textSize="20sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear">

            <TextView
                android:id="@+id/MarketTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/market_cap"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtCoinMarketCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/coin_description"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/MarketTxtView"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/CoinPriceTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/current_price"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/MarketTxtView" />

            <TextView
                android:id="@+id/txtCoinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:hint="@string/coin_price"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/CoinPriceTxtView"
                app:layout_constraintTop_toBottomOf="@id/txtCoinMarketCap" />

            <TextView
                android:id="@+id/LowPriceTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/low_price"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/CoinPriceTxtView" />


            <TextView
                android:id="@+id/txtCoinPriceLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:hint="@string/low_price"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/LowPriceTxtView"
                app:layout_constraintTop_toBottomOf="@id/txtCoinPrice" />

            <TextView
                android:id="@+id/HighPriceTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/high_price"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LowPriceTxtView" />

            <TextView
                android:id="@+id/txtCoinPriceHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:hint="@string/high_price"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/HighPriceTxtView"
                app:layout_constraintTop_toBottomOf="@id/txtCoinPriceLow" />

            <TextView
                android:id="@+id/ChangePriceTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/price_change"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/HighPriceTxtView" />


            <TextView
                android:id="@+id/txtCoinPricePercentChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/price_change"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/ChangePriceTxtView"
                app:layout_constraintTop_toBottomOf="@id/txtCoinPriceHigh" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>